--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,22 @@ img {
 
 /*Contacto*/
 
+.error {
+    background-color: rgb(185, 0, 0);
+    text-align: center;
+    padding: 1rem;
+    color: var(--blanco);
+    text-transform: uppercase;
+}
+
+.correcto{
+    background-color: rgb(74,185,0);
+    text-align: center;
+    padding: 1rem;
+    color: var(--blanco);
+    text-transform: uppercase;
+}
+
 .contacto-background {
     background-image: url(../img/contacto.jpg);
     height: 40rem; /*Altura de 400px*/
